--- a/guanfang/dashboard.html
+++ b/guanfang/dashboard.html
@@ -69,13 +69,13 @@ a[href="/dashboard"]::before {
 a[href="/dashboard/profile"]::after {
   content: "|";
   margin-left: 0.3em;
-  margin-right: 0.2em;
+  /*margin-right: 0.1em;*/
   color: rgba(255, 255, 255, 0.4) !important;
 }
 a[href="/dashboard/settings"]::after {
   content: "|";
   margin-left: 0.3em;
-  margin-right: 0.2em;
+  /*margin-right: 0.1em;*/
   color: rgba(255, 255, 255, 0.4) !important;
 }
 
